--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -15,24 +15,28 @@
             <ColumnDefinition Width="1*"/>
             <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
-
-        <Menu Background="Transparent" x:Name="menu">
-            <MenuItem Header="_File">
-                <MenuItem Command="ApplicationCommands.Copy"/>
-                <MenuItem Command="ApplicationCommands.Cut"/>
-                <MenuItem Command="ApplicationCommands.Close"/>
-            </MenuItem>
-        </Menu>
-        
       
         <Grid x:Name="listView" Grid.Row="1" Grid.Column="0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="6*"/>
+                <RowDefinition Height=".5*"/>
+                <RowDefinition Height="2*"/>
             </Grid.RowDefinitions>
-            <Label x:Name="listbox_label"  Grid.Row="0" Content="Kiválasztott" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top"/>
-            <ListBox x:Name="listbox" Grid.Row="1"  Margin="20,30,20,30"/>
+            <Label  Grid.Row="0" Content="Könyvek" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="16" FontWeight="Bold"/>
+            <ListBox x:Name="listbox" Grid.Row="1"  Margin="10"/>
+            <Label x:Name="lbStatistics" Grid.Row="2" HorizontalAlignment="Center" Content="Könyvek darabszáma: "></Label>
+            <Grid Grid.Row="3">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
 
+                <Button x:Name="btn_Add" Grid.Column="0"
+                       Content="Add" Margin="10px 20px" Click="btn_Add_Click"></Button>
+                <Button x:Name="btn_SaveToFile" Grid.Column="1"
+                       Content="Export to file" Margin="10px 20px" Click="btn_SaveToFile_Click"></Button>
+            </Grid>
         </Grid>
         <Grid x:Name="detailsView" Grid.Column="1" Grid.Row="1">
             <Grid.RowDefinitions>
@@ -48,8 +52,8 @@
                     <ColumnDefinition/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
-                <Button x:Name="btn_Save" IsEnabled="False" Grid.Column="0" Content="Save to file" HorizontalAlignment="Stretch" Margin="10,10,10,10" VerticalAlignment="Stretch" Click="btn_Save_Click"/>
-                <Button x:Name="btn_Copy" IsEnabled="False" Grid.Column="1" Content="Copy" HorizontalAlignment="Stretch" Margin="10,10,10,10" VerticalAlignment="Stretch" Click="btn_Copy_Click"/>
+                <Button x:Name="btn_Save" IsEnabled="False" Grid.Column="0" Content="Save" HorizontalAlignment="Stretch" Margin="10,10,10,10" VerticalAlignment="Stretch" Click="btn_Save_Click"/>
+                <Button x:Name="btn_Duplicate" IsEnabled="False" Grid.Column="1" Content="Duplicate" HorizontalAlignment="Stretch" Margin="10,10,10,10" VerticalAlignment="Stretch" Click="btn_Duplicate_Click"/>
                 <Button x:Name="btn_Delete" IsEnabled="False" Grid.Column="2" Content="Delete" HorizontalAlignment="Stretch" Margin="10,10,10,10" VerticalAlignment="Stretch" Click="btn_Delete_Click"/>
 
             </Grid>
